segunda imagen, más pequeña

--- a/feliz_cumple.html
+++ b/feliz_cumple.html
@@ -9,6 +9,7 @@
       <h1>¡Feliz Cumpleaños!</h1>   
       <p>¡Que tengas un día lleno de amor, alegría y muchos regalos!</p>
       <p> Sabés que sos super groso y en esta empresa te queremos un montón!</p>
+      <img src="https://github.com/primercado/reto_3_correos/blob/0a9b1844bcd004801225d1693636f864bb950c6f/isabella-fischer-sQoIRY84a2E-unsplash.jpg?raw=true" alt="Descripción de la imagen">
     </div>
   </body>
 </html>
